--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             border: 4px solid white;
         }
 
-        .btn {
+        /* .btn {
             background-color: #ffb4a2;
             color: white;
             padding: 12px 25px;
@@ -104,7 +104,7 @@
         .btn:hover {
             transform: scale(1.05);
             background-color: #e5989b;
-        }
+        } */
     </style>
 </head>
 <body>
@@ -131,7 +131,6 @@
             Thank you for all the laughs and for always being 
             the person I can count on. I appreciate you more than words can say. Happy Valentine's Day.
         </p>
-        <button class="btn" onclick="alert('I love you! ❤️')">Click for a Hug</button>
     </div>
 
 </body>
